[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dyna_zarr"]

[tool.setuptools.package-dir]
"" = "src"

[project]
name = "dyna_zarr"
version = "0.0.1"
description = "A lightweight library for lazy operations on Zarr arrays without task graph overhead"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Bugra Oezdemir", email = "bugraa.ozdemir@gmail.com"},
]
keywords = ["zarr", "lazy", "array", "dask-alternative"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "zarr>=3.0.0",
    "numpy>=1.20.0",
    "tensorstore",
    "tifffile"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
]

[project.urls]
Homepage = "https://github.com/bugraoezdemir/dyna_zarr"
Documentation = "https://dyna-zarr.readthedocs.io"
